Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-72775

Undeclared IFM_FDDI on FreeBSD 12.0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P3: Somewhat important
    • 5.12.1, 5.14.0 Alpha
    • 5.11.2
    • Network
    • None
    • Other
    • 804eea08b43d426112a5c1152f52dd3660e25b71 (qt/qtbase/5.12.1)

    Description

      14:10:54 clang++ -c -pipe -Os -std=c++11 -fno-exceptions -Wall -W -Wdate-time -pthread -fPIC -DQT_UIC -DQT_NO_CAST_FROM_ASCII -DQT_NO_FOREACH -DQT_UIC_CPP_GENERATOR -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_USE_QSTRINGBUILDER -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I. -Icpp -I. -I../../../include -I../../../include/QtCore -I.moc -I/usr/home/xyz/jenkins/workspace/default_Libs_FreeBSD/build/dist/include -I/usr/local/include -I../../../mkspecs/freebsd-clang -o .obj/main.o main.cpp
      14:10:54 --- sub-network-make_first ---
      14:10:54 --- .obj/qnetworkinterface_unix.o ---
      14:10:54 kernel/qnetworkinterface_unix.cpp:466:14: error: use of undeclared identifier 'IFM_FDDI'; did you mean 'IFT_FDDI'?
      14:10:54         case IFM_FDDI:
      14:10:54              ^~~~~~~~
      14:10:54              IFT_FDDI
      14:10:54 /usr/include/net/if_types.h:62:2: note: 'IFT_FDDI' declared here
      14:10:54         IFT_FDDI        = 0xf,
      14:10:54         ^
      14:10:54 1 error generated.
      

      Attachments

        For Gerrit Dashboard: QTBUG-72775
        # Subject Branch Project Status CR V

        Activity

          People

            thiago Thiago Macieira
            misery André Klitzing
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes